# finkit

./: .gitignore  CHANGELOG.md  cron.yml  logging.yml  pyproject.toml  readme.md  全部品种.xlsx
scripts/: future_symbol_info.py
src/finkit/: __main__.py  utils.py  variety_info.csv
src/finkit/algorithm/: __init__.py  algo.py  huatai_option_algo.py  option_algo.py
src/finkit/collector/: __init__.py  account_source.py  cffex_collector.py  cffex_daily_trading_volume.py  collector_context.py  crawler.py  czce_collector.py  czce_daily_trading_volume.py  dce_collector.py  dce_daily_trading_volume.py  future_constants.py  future_exchange_collector.py  future_job.py  future_source.py  huatai_option_crawler.py  shfe_collector.py  shfe_daily_stock.py  shfe_daily_trading_volume.py  shfe_position_data.py  source_error.py
src/finkit/cron/: __init__.py  test_sleep.py
tests/: cron_config.yml  test_account.py  test_akshare.py  test_collector.py  test_cron.py  test_daily_stock.py  test_daily_trading_volume.py  test_huatai_option_algo.py  test_huatai_option_crawler.py  test_option_algo.py  test_pandas.py  test_shfe_daily_trading_volume.py
