[project]
name = "finkit"
description = "financial kit"
version = "0.0.1"
dependencies = [
    "pyyaml >= 6.0",
    "numpy >= 1.23",
    "scipy >= 1.9",
    "pandas >= 1.5",
]


[project.scripts]
finkit = "finkit.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
#include = ["finkit"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
